{
    "name": "MainActions",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "3cce800f-cfec-4491-bbc4-36fed6cd4fb6",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "ce0573bc-5277-41f4-9eff-1324232cfdad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MainTouch",
                    "type": "Button",
                    "id": "e6b7251c-e85d-4d09-b35e-406cc4e18762",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a9ad0ce3-0e24-45c9-9260-2236395cf766",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3be1bd64-dd18-4dd2-9689-08e36b4b8044",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PlayerInput",
            "bindingGroup": "PlayerInput",
            "devices": []
        }
    ]
}